setup the nav bar - added the yellow to current class, set the proper widths, padding, and margins to proper values.

--- a/styles/main.css
+++ b/styles/main.css
@@ -17,6 +17,29 @@ body {
 a:focus, a:hover {
 	font-style: italic;
 }
+
+#nav_menu ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+#nav_menu ul li {
+	float: left;
+}
+#nav_menu ul li a {
+	display: block;
+	width: 160px;
+	text-align: center;
+	padding: 1em 0;
+	text-decoration: none;
+	background-color: #800000;
+	color: white;
+	font-weight: bold;
+}
+#nav_menu ul li a.current {
+	color: yellow;
+}
+
 /* the styles for the header */
 header {
 	padding: 1.5em 0 2em 0;
