--- a/styles/main.css
+++ b/styles/main.css
@@ -18,6 +18,7 @@ a:focus, a:hover {
 	font-style: italic;
 }
 
+/* styless for nav bar */
 #nav_menu ul {
 	list-style: none;
 	margin: 0;
@@ -38,6 +39,24 @@ a:focus, a:hover {
 }
 #nav_menu ul li a.current {
 	color: yellow;
+}
+
+/* styles for dropdown */
+#nav_menu ul ul {
+	position: relative;
+	display: none;
+	top: 100%;
+}
+#nav_menu ul ul li {
+	float: none;
+}
+#nav_menu ul li:hover > ul {
+	display: block;
+}
+#nav_menu > ul::after {
+	display: block;
+	content: "";
+	clear: both;
 }
 
 /* the styles for the header */
