--- a/styles/c6_speaker.css
+++ b/styles/c6_speaker.css
@@ -42,6 +42,45 @@ header img {
 	float: left;
 	padding: 0 30px;
 }
+
+/* styless for nav bar */
+#nav_menu ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+#nav_menu ul li {
+	float: left;
+}
+#nav_menu ul li a {
+	display: block;
+	width: 160px;
+	text-align: center;
+	padding: 1em 0;
+	text-decoration: none;
+	background-color: #800000;
+	color: white;
+	font-weight: bold;
+}
+
+/* styles for dropdown */
+#nav_menu ul ul {
+	position: relative;
+	display: none;
+	top: 100%;
+}
+#nav_menu ul ul li {
+	float: none;
+}
+#nav_menu ul li:hover > ul {
+	display: block;
+}
+#nav_menu > ul::after {
+	display: block;
+	content: "";
+	clear: both;
+}
+
 .shadow {
 	text-shadow: 2px 2px 2px #800000;
 }
