--- a/styles/c8_main.css
+++ b/styles/c8_main.css
@@ -1,168 +1,245 @@
-/* the styles for the elements */
 * {
 	margin: 0;
 	padding: 0;
 }
-html {
-	background-color: white;
+
+h1 {
+	font-size: 150%;
+	padding-top: .5em;
+	padding-bottom: .25em;
+	margin: 0;
 }
-body {
-	font-family: Arial, Helvetica, sans-serif;
-    font-size: 100%;
-    width: 800px;
-    margin: 0 auto;
-    border: 3px solid #931420;
-    background-color: #fffded;
+
+h2 {
+	padding-top: .5em;
+	padding-bottom: .25em;
 }
-a:focus, a:hover {
+
+h3 {
+	padding-bottom: .25em;
+}
+
+p {
+	padding-bottom: .5em;
+}
+
+blockquote {
+	padding-left: 2em;
+	padding-right: 2em;
 	font-style: italic;
 }
-/* the styles for the header */
-header {
-	padding: 1.5em 0 2em 0;
-	border-bottom: 3px solid #931420;
-		background-image: -moz-linear-gradient(
-	    30deg, #f6bb73 0%, #f6bb73 30%, white 50%, #f6bb73 80%, #f6bb73 100%);
-	background-image: -webkit-linear-gradient(
-	    30deg, #f6bb73 0%, #f6bb73 30%, white 50%, #f6bb73 80%, #f6bb73 100%);
-	background-image: -o-linear-gradient(
-	    30deg, #f6bb73 0%, #f6bb73 30%, white 50%, #f6bb73 80%, #f6bb73 100%);
-	background-image: linear-gradient(
-	    30deg, #f6bb73 0%, #f6bb73 30%, white 50%, #f6bb73 80%, #f6bb73 100%);
+
+ul {
+	padding-left: 1.25em;
+	padding-bottom: .25em;
 }
-header h2 {
-	font-size: 175%;
-	color: #800000;
+
+li {
+	padding-bottom: .35em;
 }
-header h3 {
-	font-size: 130%;
-	font-style: italic;
-}
-header img {
-	float: left;
-	padding: 0 30px;
-}
-.shadow {
-	text-shadow: 2px 2px 2px #800000;
-}
-/* the styles for the navigation menu */
+
 #nav_menu ul {
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
 	position: relative;
 }
+
 #nav_menu ul li {
 	float: left;
+	text-align: center;
+	width: 20%;
 }
+
 #nav_menu ul li a {
-    display: block;
-    width: 160px;
-    text-align: center;
-    padding: 1em 0;
-    text-decoration: none;
-    background-color: #800000;
-    color: white;
-    font-weight: bold;
+	display: block;
+	padding-top: 1em;
+	padding-bottom: 1em;
+	text-decoration: none;
+	background-color: #800000;
+	color: white;
+	font-weight: bold;
 }
-#nav_menu a.current {
+
+#nav_menu ul li .current {
 	color: yellow;
 }
+
 #nav_menu ul ul {
-    display: none;
-    position: absolute;
-    top: 100%;
+	list-style-type: none;
+	position: absolute;
+	display: none;
+	width: 100%;
+
 }
-#nav_menu ul ul li {
+
+
+#nav_menu  ul li ul li {
 	float: none;
+	top: 100%;
+	margin: 0;
+	padding: 0;
+
 }
+
 #nav_menu ul li:hover > ul {
 	display: block;
-}
-#nav_menu > ul::after {
-    content: "";
-    clear: both;
-    display: block;
+
 }
 
-/* the styles for the section */
+
+/* the styles for the elements */
+body {
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 100%;
+	width: 99%;
+	max-width: 960px;
+	margin-top: 0;
+	margin-bottom: 0;
+	margin-left: auto;
+	margin-right: auto;
+	border: 3px solid #931420;
+	background-color: #fffded;
+}
+
 section {
-	width: 525px;
+	width: 64%;
 	float: right;
-	padding: 0 20px 20px 20px;
+	padding-left: 2.08%;
+	padding-right: 1.04%;
+	padding-bottom: 1.04%;
 }
-section h1 {
-	font-size: 150%;
-	padding: .5em 0 .25em 0;
-	margin: 0;
+
+aside {
+	width: 30%;
+	float: right;
+	padding-left: 2.08%;
+	padding-right: 2.08%;
 }
-section h2 {
+
+html {
+	background-color: white;
+}
+
+/* the styles for the header */
+header {
+	border-bottom: 3px solid #931420;
+			background-image: -moz-linear-gradient(
+		    30deg, #f6bb73 0%, #f6bb73 30%, white 50%, #f6bb73 80%, #f6bb73 100%);
+		background-image: -webkit-linear-gradient(
+		    30deg, #f6bb73 0%, #f6bb73 30%, white 50%, #f6bb73 80%, #f6bb73 100%);
+		background-image: -o-linear-gradient(
+		    30deg, #f6bb73 0%, #f6bb73 30%, white 50%, #f6bb73 80%, #f6bb73 100%);
+		background-image: linear-gradient(
+		    30deg, #f6bb73 0%, #f6bb73 30%, white 50%, #f6bb73 80%, #f6bb73 100%);
+}
+header img {
+	float: left;
+	padding-left: 30px;
+	padding-right: 30px;
+}
+
+header h2 {
+	font-size: 170%;
 	color: #800000;
+}
+
+header h3 {
 	font-size: 130%;
-	padding: .5em 0 .25em 0;
-}
-section p {
-	padding-bottom: .5em;
-}
-section blockquote {
-	padding: 0 2em;
 	font-style: italic;
 }
-section ul {
-	padding: 0 0 .25em 1.25em;
-	list-style-type: circle;
+
+.shadow {
+	color:  #800000;
+	text-shadow: 1px -1px;
 }
-section li {
-	padding-bottom: .35em;
+/* the styles for the section */
+main {
+	clear: left;
 }
 
-/* the styles for the article */
+main aside h1 {
+	font-size: 150%;
+	border: 3px solid #931420;
+	border-radius: 10px 10px 10px 10px;
+	text-align: center;
+	box-shadow: 3px 3px 3px 3px #931420;
+}
+main h2 {
+	font-size: 130%;
+	color: #800000;
+}
+main h3 { font-size: 105%; }
+
+main aside img {
+	padding-bottom: 2em;
+}
+
 article {
-	padding: .5em 0;
+	padding-top: .5em;
+	padding-bottom: 2em;
 	border-top: 2px solid #800000;
 	border-bottom: 2px solid #800000;
 }
+
 article h2 {
 	padding-top: 0;
 }
+
 article h3 {
 	font-size: 105%;
 	padding-bottom: .25em;
 }
+
 article img {
 	float: right;
-	margin: .5em 0 1em 1em;
+	margin:	 1em;
 	border: 1px solid black;
-}
-
-/* the styles for the aside */
-aside {
-	width: 215px;
-	float: right;
-	padding: 0 0 20px 20px;
-}
-aside h2 {
-	color: #800000;
-	font-size: 130%;
-	padding: .5em 0 .25em 0;
-}
-
-aside h3 {
-	font-size: 105%;
-	padding-bottom: .25em;
-}
-aside img {
-	padding-bottom: 1em;
+	max-width: 40%;
+	min-width: 150px;
 }
 
 /* the styles for the footer */
-footer {
-	background-color: #931420;
-	clear: both;
 
-}
-footer p {
-	text-align: center;
+footer {
+	padding-top: .5em;
+	background-color: #931420;
 	color: white;
-	padding: 1em 0;
+	text-align: center;
+	clear: both;
+}
+
+#mobile_menu {
+	display: none;
+}
+
+@media only screen and (max-width: 767px) {
+	header img {
+		float: none;
+		display: block;
+		margin: auto;
+	}
+
+	header {
+		text-align: center;
+	}
+
+	aside {
+		float: none;
+	}
+}
+
+@media only screen and (max-width: 497px) {
+	body {
+		font-size: 90%;
+	}
+	#nav_menu {
+		display: none;
+	}
+	#mobile_menu {
+		display: block;
+	}
+	#mobile_menu .slicknav_menu {
+		background-color: #800000;
+	}
 }
